added docker to build linux kernel

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ CTestTestfile.cmake
 
 #NetworkDriverExperimentBuild
 NetworkDriverExperiment/cmake-build-debug/**
+
+#LinuxKernelBuild
+LinuxKernel/out/**
