--- a/build_scripts/Rpi3ImageBuild/Dockerfile
+++ b/build_scripts/Rpi3ImageBuild/Dockerfile
@@ -1,4 +1,4 @@
 FROM ubuntu:bionic
 RUN apt-get update
-RUN apt-get -y install wget tar xz-utils
+RUN apt-get -y install wget tar xz-utils kpartx
 ENTRYPOINT tail -f /dev/null
