--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "kernel.h": "c",
         "errno.h": "c",
         "types.h": "c",
-        "init.h": "c"
+        "init.h": "c",
+        "random.h": "c"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-x64"
 }
